Canbios visuales, colores y comienzo de la sección productos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main class="main__grid">
     <img class="main__img" src="./assets/Imagen de WhatsApp 2023-01-02 a las 21.05.12.jpg" alt="LOGO">
     <section class="ofertas__grid">
-      <h2>Productos en Oferta</h2>
+      <h1>Categorías</h1>
       <article></article>
       <article></article>
       <article></article>
