--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -26,12 +26,16 @@
   </header>
   <main>
     <h1>PRODUCTOS</h1>
-    <br>
-    <h3>PRODUCTOS DE MERCERIA</h3>
-    <br>
-    <img src="../assets/el-hilo-en-las-maquinas-de-coser.jpg" alt="Hilos" class="img__productos">
-    <img src="../assets/descarga.jpg" alt="Telas" class="img__productos">
-    <img src="../assets/tipos-de-lana-1.jpg" alt="Lanas" class="img__productos">
+    <section class="productos__grid">
+      <article class="producto">
+        <h2>Tijeras</h2>
+        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.35.11adasfdas.jpg" alt="">
+        <div>
+          <p>Descripción del Producto</p>
+        </div>
+        <button>Comprar</button>
+      </article>
+    </section>
   </main>
   <footer class="footer">
     <a href="./index.html">
