Grid de Productos

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -28,12 +28,45 @@
     <h1>PRODUCTOS</h1>
     <section class="productos__grid">
       <article class="producto">
-        <h2>Tijeras</h2>
-        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.35.11adasfdas.jpg" alt="">
-        <div>
-          <p>Descripción del Producto</p>
-        </div>
-        <button>Comprar</button>
+        <h2>Hilo Encerado</h2>
+        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.22s.jpg" alt="Hilo Encerado">
+        <div>AGREGAR AL CARRITO</div>
+        <div>$</div>
+      </article>
+      <article class="producto">
+        <h2>Totoras</h2>
+        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.19jkhjkhj.jpg" alt="Totoras">
+        <div>AGREGAR AL CARRITO</div>
+        <div>$</div>
+      </article>
+      </article>
+      <article class="producto">
+        <h2>Cierres</h2>
+        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.20gfd.jpg" alt="Cierres">
+        <div>AGREGAR AL CARRITO</div>
+        <div>$</div>
+      </article>
+      </article>
+      <article class="producto">
+        <h2>Avíos</h2>
+        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21a.jpg" alt="Avíos">
+        <div>AGREGAR AL CARRITO</div>
+        <div>$</div>
+      </article>
+      </article>
+      <article class="producto">
+        <h2>Elásticos para boxer y ropa deportiva</h2>
+        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21aa.jpg" alt="Elásticos p/boxer">
+        <div>AGREGAR AL CARRITO</div>
+        <div>$</div>
+      </article>
+      </article>
+      <article class="producto">
+        <h2>Rueda de alfileres largos</h2>
+        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.22.jpg" alt="Ruedas alfileres">
+        <div>AGREGAR AL CARRITO</div>
+        <div>$</div>
+      </article>
       </article>
     </section>
   </main>
