Grid Menú y Productos completo

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -30,43 +30,38 @@
       <article class="producto">
         <h2>Hilo Encerado</h2>
         <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.22s.jpg" alt="Hilo Encerado">
-        <div>AGREGAR AL CARRITO</div>
-        <div>$</div>
+        <div class="carrito__2">AGREGAR AL CARRITO</div>
+        <div>$380</div>
       </article>
       <article class="producto">
         <h2>Totoras</h2>
         <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.19jkhjkhj.jpg" alt="Totoras">
-        <div>AGREGAR AL CARRITO</div>
-        <div>$</div>
-      </article>
+        <div class="carrito__2">AGREGAR AL CARRITO</div>
+        <div>$650 (kg)</div>
       </article>
       <article class="producto">
-        <h2>Cierres</h2>
+        <h2>Cierres Reforzados</h2>
         <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.20gfd.jpg" alt="Cierres">
-        <div>AGREGAR AL CARRITO</div>
-        <div>$</div>
-      </article>
+        <div class="carrito__2">AGREGAR AL CARRITO</div>
+        <div>$320</div>
       </article>
       <article class="producto">
-        <h2>Avíos</h2>
+        <h2>Avíos (6,8 y 10 mm)</h2>
         <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21a.jpg" alt="Avíos">
-        <div>AGREGAR AL CARRITO</div>
-        <div>$</div>
-      </article>
+        <div class="carrito__2">AGREGAR AL CARRITO</div>
+        <div>$20</div>
       </article>
       <article class="producto">
-        <h2>Elásticos para boxer y ropa deportiva</h2>
+        <h2>Elásticos para boxer</h2>
         <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21aa.jpg" alt="Elásticos p/boxer">
-        <div>AGREGAR AL CARRITO</div>
-        <div>$</div>
-      </article>
+        <div class="carrito__2">AGREGAR AL CARRITO</div>
+        <div>$200 (m)</div>
       </article>
       <article class="producto">
         <h2>Rueda de alfileres largos</h2>
         <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.22.jpg" alt="Ruedas alfileres">
-        <div>AGREGAR AL CARRITO</div>
-        <div>$</div>
-      </article>
+        <div class="carrito__2">AGREGAR AL CARRITO</div>
+        <div>$300 (x48u)</div>
       </article>
     </section>
   </main>
