Animate.css, animaciones, cambios visuales, colores y fuentes nuevas, se linkea wow.js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Entre Hilos Mercería</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <script src="https://kit.fontawesome.com/8120922576.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,43 +32,57 @@
       <h1>Categorías</h1>
       <ul class="categorias__main_grid">
         <li class="hilos">
-          <p class="titulo__cat">
-            Hilos
-          </p>
-          <img src="./assets/Categorías_main/Hilos.avif" alt="hilos_cat">
+          <a href="./secciones/productos.html">
+            <p class="titulo__cat">
+
+              Hilos
+            </p>
+            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Hilos.avif" alt="hilos_cat">
+          </a>
         </li>
         <li class="botones">
-          <p class="titulo__cat">
-            
-            Botones
-          </p>
-          <img src="./assets/Categorías_main/Botones.avif" alt="botones_cat">
+          <a href="./secciones/productos.html">
+            <p class="titulo__cat">
+
+              Botones
+            </p>
+            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Botones.avif" alt="botones_cat">
         </li>
+        </a>
         <li class="elasticos">
-          <p class="titulo__cat">
-            
-            Elásticos
-          </p>
-          <img src="./assets/Categorías_main/Elásticos.jpg" alt="elasticos_cat">
+          <a href="./secciones/productos.html">
+            <p class="titulo__cat">
+
+              Elásticos
+            </p>
+            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Elásticos.jpg"
+              alt="elasticos_cat">
         </li>
+        </a>
         <li class="cintas">
-          <p class="titulo__cat">
-            Cintas
-          </p>
-          <img src="./assets/Categorías_main/Cintas.avif" alt="cintas_cat">
+          <a href="./secciones/productos.html">
+            <p class="titulo__cat">
+              Cintas
+            </p>
+            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Cintas.avif" alt="cintas_cat">
         </li>
+        </a>
         <li class="lanas">
-          <p class="titulo__cat">
-            Lanas
-          </p>
-          <img src="./assets/Categorías_main/Lanas.avif" alt="lanas_cat">
+          <a href="./secciones/productos.html">
+            <p class="titulo__cat">
+              Lanas
+            </p>
+            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Lanas.avif" alt="lanas_cat">
         </li>
+        </a>
         <li class="cierres">
-          <p class="titulo__cat">
-            Cierres
-          </p>
-          <img src="./assets/Categorías_main/Cierres.jpg" alt="cierres_cat">
+          <a href="./secciones/productos.html">
+            <p class="titulo__cat">
+              Cierres
+            </p>
+            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Cierres.jpg" alt="cierres_cat">
         </li>
+        </a>
       </ul>
     </section>
     <aside>
@@ -90,5 +106,10 @@
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </footer>
 </body>
+
+<script src="./js/wow.js"></script>
+<script>
+  new WOW().init();
+</script>
 
 </html>
