--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Entre Hilos Mercería</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <script src="https://kit.fontawesome.com/8120922576.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -77,5 +79,10 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 </body>
+
+<script src="./js/wow.js"></script>
+<script>
+  new WOW().init();
+</script>
 
 </html>
