--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Productos - Entre Hilos Mercería</title>
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <script src="https://kit.fontawesome.com/8120922576.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,7 +31,7 @@
     <section class="productos__grid">
       <article class="producto">
         <h2>Hilo Encerado</h2>
-        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.22s.jpg" alt="Hilo Encerado">
+        <img src="../assets/Productos/Hilo Encerado.jpg" alt="Hilo Encerado">
         <div class="carrito__2">AGREGAR AL CARRITO</div>
         <div>$380</div>
       </article>
@@ -82,5 +84,10 @@
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </footer>
 </body>
+
+<script src="./js/wow.js"></script>
+<script>
+  new WOW().init();
+</script>
 
 </html>
