--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
               Hilos
             </p>
-            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Hilos.avif" alt="hilos_cat">
+            <img class="pulse__button" src="./assets/Categorías_main/Hilos.avif" alt="hilos_cat">
           </a>
         </li>
         <li class="botones">
@@ -46,7 +46,7 @@
 
               Botones
             </p>
-            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Botones.avif" alt="botones_cat">
+            <img class="pulse__button" src="./assets/Categorías_main/Botones.avif" alt="botones_cat">
         </li>
         </a>
         <li class="elasticos">
@@ -55,8 +55,7 @@
 
               Elásticos
             </p>
-            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Elásticos.jpg"
-              alt="elasticos_cat">
+            <img class="pulse__button" src="./assets/Categorías_main/Elásticos.jpg" alt="elasticos_cat">
         </li>
         </a>
         <li class="cintas">
@@ -64,7 +63,7 @@
             <p class="titulo__cat">
               Cintas
             </p>
-            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Cintas.avif" alt="cintas_cat">
+            <img class="pulse__button" src="./assets/Categorías_main/Cintas.avif" alt="cintas_cat">
         </li>
         </a>
         <li class="lanas">
@@ -72,7 +71,7 @@
             <p class="titulo__cat">
               Lanas
             </p>
-            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Lanas.avif" alt="lanas_cat">
+            <img class="pulse__button" src="./assets/Categorías_main/Lanas.avif" alt="lanas_cat">
         </li>
         </a>
         <li class="cierres">
@@ -80,7 +79,7 @@
             <p class="titulo__cat">
               Cierres
             </p>
-            <img class="wow animate__animated animate__pulse" src="./assets/Categorías_main/Cierres.jpg" alt="cierres_cat">
+            <img class="pulse__button" src="./assets/Categorías_main/Cierres.jpg" alt="cierres_cat">
         </li>
         </a>
       </ul>
