--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -8,6 +8,7 @@
   <title>Productos - Entre Hilos Mercería</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="css/animate.css">
   <script src="https://kit.fontawesome.com/8120922576.js" crossorigin="anonymous"></script>
 </head>
 
@@ -31,37 +32,43 @@
     <section class="productos__grid">
       <article class="producto">
         <h2>Hilo Encerado</h2>
-        <img src="../assets/Productos/Hilo Encerado.jpg" alt="Hilo Encerado">
+        <img class="wow animate__animated animate__pulse" src="../assets/Productos/Hilo Encerado.jpg"
+          alt="Hilo Encerado">
         <div class="carrito__2">AGREGAR AL CARRITO</div>
         <div>$380</div>
       </article>
       <article class="producto">
         <h2>Totoras</h2>
-        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.19jkhjkhj.jpg" alt="Totoras">
+        <img class="wow animate__animated animate__pulse"
+          src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.19jkhjkhj.jpg" alt="Totoras">
         <div class="carrito__2">AGREGAR AL CARRITO</div>
         <div>$650 (kg)</div>
       </article>
       <article class="producto">
         <h2>Cierres Reforzados</h2>
-        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.20gfd.jpg" alt="Cierres">
+        <img class="wow animate__animated animate__pulse"
+          src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.20gfd.jpg" alt="Cierres">
         <div class="carrito__2">AGREGAR AL CARRITO</div>
         <div>$320</div>
       </article>
       <article class="producto">
         <h2>Avíos (6,8 y 10 mm)</h2>
-        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21a.jpg" alt="Avíos">
+        <img class="wow animate__animated animate__pulse"
+          src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21a.jpg" alt="Avíos">
         <div class="carrito__2">AGREGAR AL CARRITO</div>
         <div>$20</div>
       </article>
       <article class="producto">
         <h2>Elásticos para boxer</h2>
-        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21aa.jpg" alt="Elásticos p/boxer">
+        <img class="wow animate__animated animate__pulse"
+          src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.21aa.jpg" alt="Elásticos p/boxer">
         <div class="carrito__2">AGREGAR AL CARRITO</div>
         <div>$200 (m)</div>
       </article>
       <article class="producto">
         <h2>Rueda de alfileres largos</h2>
-        <img src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.22.jpg" alt="Ruedas alfileres">
+        <img class="wow animate__animated animate__pulse"
+          src="../assets/Productos/Imagen de WhatsApp 2023-01-02 a las 22.41.22.jpg" alt="Ruedas alfileres">
         <div class="carrito__2">AGREGAR AL CARRITO</div>
         <div>$300 (x48u)</div>
       </article>
@@ -85,7 +92,7 @@
   </footer>
 </body>
 
-<script src="./js/wow.js"></script>
+<script src="../js/wow.js"></script>
 <script>
   new WOW().init();
 </script>
