--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header class="header">
-    <a href="./index.html">
+    <a class="a__header" href="./index.html">
       <img class="img__logo" src="./assets/Imagen de WhatsApp 2023-01-02 a las 21.05.12.jpg" alt="Entre Hilos Logo">
     </a>
     <nav class="nav">
@@ -27,7 +27,7 @@
     </nav>
   </header>
   <main class="main__grid">
-    <img class="main__img" src="./assets/Imagen de WhatsApp 2023-01-02 a las 21.05.12.jpg" alt="LOGO">
+    <img class="main__img" src="./assets/Entre Hilos Logo.PNG" alt="LOGO">
     <section class="ofertas__grid">
       <h1>Categorías</h1>
       <ul class="categorias__main_grid">
