--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <a href="../index.html">
+        <a class="a__header" href="../index.html">
             <img class="img__logo" src="../assets/Imagen de WhatsApp 2023-01-02 a las 21.05.12.jpg"
                 alt="Entre Hilos Logo">
         </a>
@@ -70,7 +70,7 @@
 
 <script src="./js/wow.js"></script>
 <script>
-  new WOW().init();
+    new WOW().init();
 </script>
 
 </html>
