--- a/secciones/como_comprar.html
+++ b/secciones/como_comprar.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Como Comprar - Entre Hilos Mercería</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="../css/style.css">
   <script src="https://kit.fontawesome.com/8120922576.js" crossorigin="anonymous"></script>
 </head>
 
@@ -16,7 +18,31 @@
     <a class="a__header" href="../index.html">
       <img class="img__logo" src="../assets/Imagen de WhatsApp 2023-01-02 a las 21.05.12.jpg" alt="Entre Hilos Logo">
     </a>
-    <nav class="nav">
+    <div class="nav__mobile">
+      <div class="collapse" id="navbarToggleExternalContent">
+        <div class="p-4">
+          <h5 class="text-white h4">
+            <ul class="menu">
+              <li><a href="../index.html">INICIO</a></li>
+              <li><a href="./nosotros.html">NOSOTROS</a></li>
+              <li><a href="./como_comprar.html" class="menu--activo">COMO COMPRAR</a></li>
+              <li><a href="./productos.html">PRODUCTOS</a></li>
+              <li><a href="./contacto.html">CONTACTO</a></li>
+            </ul>
+          </h5>
+        </div>
+      </div>
+      <nav class="navbar navbar-dark">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+    </div>
+    <nav class="navbar--principal">
       <ul class="menu">
         <li><a href="../index.html">INICIO</a></li>
         <li><a href="./nosotros.html">NOSOTROS</a></li>
@@ -58,6 +84,9 @@
       width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"></iframe>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
