--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -55,6 +55,27 @@
     </header>
     <main>
         <h1>NOSOTROS</h1>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <img src="../assets/Nosotros_img/Local1.jpg" alt="Local1">
+                </div>
+                <div class="col">
+                    <img src="../assets/Nosotros_img/Local2.jpg" alt="Local2">
+                </div>
+            </div>
+            <div class=" row">
+                <div class="col">
+                    <img src="../assets/Nosotros_img/Local3.jpg" alt="Local3">
+                </div>
+                <div class="col">
+                    <img src="../assets/Nosotros_img/Local4.jpg" alt="Local4">
+                </div>
+                <div class="col">
+                    <img src="../assets/Nosotros_img/Lanas1.jpg" alt="Lanas1">
+                </div>
+            </div>
+        </div>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
@@ -67,10 +88,14 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
+                        collapse plugin adds the appropriate classes that we use to style each element. These
+                        classes
+                        control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                        can
+                        modify any of this with custom CSS or overriding our default variables. It's also worth
+                        noting
+                        that just about any HTML can go within the <code>.accordion-body</code>, though the
+                        transition
                         does limit overflow.
                     </div>
                 </div>
@@ -85,11 +110,16 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
+                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                        the
+                        collapse plugin adds the appropriate classes that we use to style each element. These
+                        classes
+                        control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                        can
+                        modify any of this with custom CSS or overriding our default variables. It's also worth
+                        noting
+                        that just about any HTML can go within the <code>.accordion-body</code>, though the
+                        transition
                         does limit overflow.
                     </div>
                 </div>
@@ -105,11 +135,37 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
+                        collapse plugin adds the appropriate classes that we use to style each element. These
+                        classes
+                        control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                        can
+                        modify any of this with custom CSS or overriding our default variables. It's also worth
+                        noting
+                        that just about any HTML can go within the <code>.accordion-body</code>, though the
+                        transition
                         does limit overflow.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        ¿Medios de pago y forma de envío?
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>This is the fourth item's accordion body.</strong> It is hidden by default, until
+                        the
+                        collapse plugin adds the appropriate classes that we use to style each element. These
+                        classes
+                        control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                        can
+                        modify any of this with custom CSS or overriding our default variables. It's also worth
+                        noting
+                        that just about any HTML can go within the <code>.accordion-body</code>
                     </div>
                 </div>
             </div>
